--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -200,6 +200,8 @@
    ],
    "source": [
     "plt.figure(figsize=(12,15))\n",
+    "\n",
+    "# data\n",
     "df[(df['Indicator'] == 'Symptoms of Depressive Disorder') & (df['Time Period'] == 20)] \\\n",
     "    .groupby(df['State']) \\\n",
     "    .mean() \\\n",
@@ -209,6 +211,8 @@
     "          pad=20, fontsize=20, color='purple')\n",
     "plt.xlabel('Percent of Adults who report symptoms of Depression (%)', fontsize=14, color='blue')\n",
     "plt.ylabel('Name of the State', fontsize=14, color='blue')\n",
+    "\n",
+    "\n",
     "plt.show()"
    ]
   },
