add employment data

--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -310,13 +310,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Massachusetts and New York recorded lower percentages of adults who report symptoms of depression, but all other states show higher values in the most recent week compared to the beginning of the pandemic.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.cdc.gov/nchs/covid19/pulse/mental-health.htm  \n",
+    "https://data.cdc.gov/NCHS/Indicators-of-Anxiety-or-Depression-Based-on-Repor/8pt5-q6wp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandemic - isolation - depression  \n",
+    "Pandemic - employment loss"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Massachusetts and New York recorded lower percentages of adults who report symptoms of depression, but all other states show higher values in the most recent week compared to the begin"
-   ]
+   "source": []
   }
  ],
  "metadata": {
