--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -994,47 +994,57 @@
        "      <th></th>\n",
        "      <th>Percent</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>State</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Nevada</th>\n",
+       "      <th>count</th>\n",
+       "      <td>52.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>46.039263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.030764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>37.075000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>42.895833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>45.783333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>48.758333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
        "      <td>60.041667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>California</th>\n",
-       "      <td>55.433333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Michigan</th>\n",
-       "      <td>55.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hawaii</th>\n",
-       "      <td>55.083333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>New York</th>\n",
-       "      <td>54.700000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Percent\n",
-       "State                \n",
-       "Nevada      60.041667\n",
-       "California  55.433333\n",
-       "Michigan    55.333333\n",
-       "Hawaii      55.083333\n",
-       "New York    54.700000"
+       "         Percent\n",
+       "count  52.000000\n",
+       "mean   46.039263\n",
+       "std     5.030764\n",
+       "min    37.075000\n",
+       "25%    42.895833\n",
+       "50%    45.783333\n",
+       "75%    48.758333\n",
+       "max    60.041667"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,12 +1052,13 @@
    "source": [
     "data = pd.DataFrame(df.groupby('State').mean()['Percent'], columns=['Percent']).sort_values('Percent', ascending=False)\n",
     "data = data[~data.index.str.contains(\"Metro Area\")]\n",
-    "data.head()"
+    "data.head()\n",
+    "data.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1074,7 @@
    ],
    "source": [
     "plt.figure(figsize=(20, 5))\n",
-    "sns.barplot(y=data['Percent'], x=data.index, orient='v')\n",
+    "bars = sns.barplot(y=data['Percent'], x=data.index, orient='v')\n",
     "plt.xticks(rotation=45)\n",
     "plt.title('Income loss during the pandemic - first 3 months', fontsize=14, pad=20, color='purple')\n",
     "plt.ylabel('Percent (%)', fontsize=10, color='blue')\n",
@@ -1071,6 +1082,13 @@
     "plt.tight_layout()\n",
     "plt.savefig('../images/fig6.jpg', dpi=200)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Income loss has been experienced across the country during the pandemic, with Nevada being affected the most.*"
    ]
   },
   {
